Update resume.html content for clarity and impact; enhance README.md usage instructions and add cssResume.png

--- a/OnlineResume/resume.html
+++ b/OnlineResume/resume.html
@@ -45,7 +45,7 @@
 
             <section class="profile">
                 <h2>Profile</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>I bring a unique blend of technical and business expertise, with hands-on experience in cybersecurity, software development, and project management</p>
             </section>
 
             <section class="experience">
@@ -54,9 +54,9 @@
                     <p><strong>Aonverse</strong> (2024- PRESENT)</p>
                     <p>Project Manager </p>
                     <ul>
-                        <li>Develop and execute comprehensive strategies.</li>
-                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam eum facilis necessitatibus nisi ea quia non, ipsa placeat libero illo sint consequuntur optio iure ab excepturi a vel ad corporis. </li>
-                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam eum facilis necessitatibus nisi ea quia non, ipsa placeat libero illo sint consequuntur optio iure ab excepturi a vel ad corporis.</li>
+                        <li>Clearly keep an overview of project scope and ensure alignment with client objectives</li>
+                        <li>Successfully drive the delivery of all GRC programs to completion by ensuring projects are done on time and within budget</li>
+                        <li>Conduct regular work with colleagues and clients through privileged audits and consulting, delivering value-added solutions</li>
                     </ul>
                 </div>
 
@@ -64,8 +64,9 @@
                     <p><strong>First Service Residential</strong> (2022 - 2024)</p>
                     <p>Business Analyst</p>
                     <ul>
-                        <li>Execute and manage the company budget effectively.</li>
-                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </li>
+                        <li>Administrative tasks include database population, file system management and organization, and record maintenance updates</li>
+                        <li>Managing multiple day-to-day tasks while paying attention to detail and maintaining professionalism </li>
+                        <li>Communicate effectively (both verbally and written) with all levels of staff, clients, and vendors </li>
                     </ul>
                 </div>
             </section>
