--- a/OnlineResume/resume.html
+++ b/OnlineResume/resume.html
@@ -40,7 +40,7 @@
         <main class="main-content">
             <div class="header">
                 <h1><span class="bold">ALECIA<span> TAYLOR</h1>
-                <p>SOFTWARE DEVELOPER</p>
+                <p>SOFTWARE ENGINEER</p>
             </div>
 
             <section class="profile">
